--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -10,7 +10,7 @@
     <div class="container text-center">
         <div class="row">
             <div class="col">
-                <GallerySlider></GallerySlider>
+                <GallerySlider type="@gameToShow.type"></GallerySlider>
             </div>
             <div class="col">
                 <h1 class="gameTitle"><b>@gameToShow.gameName</b></h1>
