--- a/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
+++ b/BlazorApp/Components/ReusableComponents/CarouselProductCard.razor
@@ -68,7 +68,7 @@
 
 	[Parameter]
 	public List<Item> psGamesToShow { get; set; }
-	private string[] imagesPC = new string[] { "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp", "PC_1.jpg", "PC_2.webp" };
+	private string[] imagesPC = new string[] { "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg", "PC_1.jpg", "PC_2.jpg" };
 	private string[] imagesPS = new string[] { "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp", "PS_1.jpg", "PS_2.webp" };
 	private string[] imagesXBOX = new string[] { "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg", "XBOX_1.jpg", "XBOX_2.jpg"};
 
