--- a/BlazorApp/Components/ReusableComponents/GallerySlider.razor
+++ b/BlazorApp/Components/ReusableComponents/GallerySlider.razor
@@ -56,7 +56,7 @@ else if (type == "PS")
     public string type { get; set; }
     private int index = 0;
     private int currentIndex = 0;
-    private string[] imagesPC = new string[] { "PC_1.jpg", "PC_2.webp"};
+    private string[] imagesPC = new string[] { "PC_1.jpg", "PC_2.jpg"};
     private string[] imagesPS = new string[] { "PS_1.jpg", "PS_2.webp"};
     private string[] imagesXBOX = new string[] { "XBOX_1.jpg", "XBOX_2.jpg" };
 
