--- a/BlazorApp/Components/Layout/MainLayout.razor.css
+++ b/BlazorApp/Components/Layout/MainLayout.razor.css
@@ -4,10 +4,56 @@
     flex-direction: column;
 }
 
-
-
 .Logo {
     margin: 0 1rem 0 1rem;
+}
+
+.searchInput gradient-text{
+    background-color: #b3b3b3 !important;
+
+}
+
+
+input[type="text"].gradient-text {
+    position: relative;
+    background: linear-gradient(90deg, rgba(159,36,255,1) 48%, rgba(0,158,255,1) 56%); /* Gradientfarve */
+    -webkit-background-clip: text;
+}
+
+    input[type="text"].gradient-text::before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, rgba(159,36,255,1) 48%, rgba(0,158,255,1) 56%); /* Gradientfarve */
+        -webkit-background-clip: text;
+        border: 2px solid;
+        border-image: linear-gradient(90deg, rgba(159,36,255,1) 48%, rgba(0,158,255,1) 56%) 1;
+        pointer-events: none;
+    }
+
+.searchInput {
+    background: linear-gradient(90deg, rgba(159,36,255,1) 48%, rgba(0,158,255,1) 56%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    border: 2px solid;
+    border-image: linear-gradient(90deg, rgba(159,36,255,1) 48%, rgba(0,158,255,1) 56%) 1;
+}
+
+
+
+.searchInput.gradient-text::before {
+    content: attr(placeholder); /* Brug placeholder teksten som indhold */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(159,36,255,1) 48%, rgba(0,158,255,1) 56%); /* Gradientfarve */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    pointer-events: none; /* Gør pseudo-elementet ikke-interaktivt */
 }
 
 main {
@@ -15,12 +61,9 @@ main {
     min-height: auto;
 }
 
-
 .mb-3 {
     background-color: #212529 !important;
 }
-
-
 
 ::deep .nav-link {
     font-weight: bold;
