--- a/BlazorApp/Components/Pages/ProductList.razor.css
+++ b/BlazorApp/Components/Pages/ProductList.razor.css
@@ -1,30 +1,4 @@
-﻿.ProductListTop {
-    color: white;
-    display: flex;
-    align-items: center;
-    position: relative;
-    background-color: transparent;
-    background-clip: content-box;
-}
-
-.ProductListSearch {
-    display:inline;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.searchBtn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-}
-
-.searchInputContainer {
-
-}
-
+﻿
 
 .textColor {
     background: #9F24FF;
@@ -34,10 +8,7 @@
 }
 
 
-.searchBtn svg {
-    justify-content: right;
-    fill: white;
-}
+
 
 
 .productsCount {
