--- a/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
+++ b/BlazorApp/Components/ReusableComponents/FavoriteListing.razor
@@ -2,6 +2,7 @@
 
 <h3 class="text">Your Favorites</h3>
 <div class="container">
+    @*Kalder på siden "Listing Games" for at opsætte produkterne på samme måde som på "ProductList".*@
 	<Listing Games="favGames"></Listing>
 </div>
 
@@ -11,14 +12,16 @@
     [Parameter]
     public int userID { get; set; }
 
-
+    //Udføre denne funktion når siden bliver indlæst.
     protected override void OnInitialized()
-    {
-        
+    {   
+        //Bruger en database funktion til at få brugerens favorite liste, som består af "itemid". 
         List<int> favorites = DB.GetFavoritesByUserID(userID);
 
+        //Loopede går igennem alle produkter i databasen og sammenligner "itemid" med de id'er der ligger på listen "favorites".
         foreach ( var item in DB.allItems)
         {
+            //Hvis favorites indeholder produktets "itemid", bliver produktet tilføjet til listen "favGames".
             if (favorites.Contains(item.itemID))
             {
                 favGames.Add(item);
