change to favortie list

--- a/BlazorApp/Components/ReusableComponents/Listing.razor
+++ b/BlazorApp/Components/ReusableComponents/Listing.razor
@@ -86,7 +86,7 @@
         }
         else
         {
-            await JSRuntime.InvokeVoidAsync("alert", $"{game.gameName}, is already on your favorites list.");
+            await JSRuntime.InvokeVoidAsync("alert", $"{game.gameName}, is already on your favorites list. Go to product if you wish to delete from your list.");
         }
     }
 }
