--- a/BlazorApp/Components/Pages/Login.razor
+++ b/BlazorApp/Components/Pages/Login.razor
@@ -67,7 +67,7 @@
         else
         {
             //Browser alert det fortæller at brugen ikke findes
-            await JSRuntime.InvokeVoidAsync("alert", "Brugeren blev ikke fundet. Prøv igen.");
+            await JSRuntime.InvokeVoidAsync("alert", "The User could not be found, Try again.");
             Console.WriteLine("Brugeren Findes ikke");
         }
     }
